2008-08-31  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c (murrine_draw_button):
	* src/murrine_draw_rgba.c (murrine_rgba_draw_button):
	Do not colorize disabled default button

2008-08-31  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c (murrine_draw_button):
	* src/murrine_draw_rgba.c (murrine_rgba_draw_button):
	Removed colored shadow from default button

2008-08-28  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_style.c (murrine_set_widget_parameters),
	(murrine_style_draw_shadow), (murrine_style_draw_box):
	Moved some GtkEntry and GtkSpinButton workarounds

2008-08-27  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* autogen.sh:
	* src/config.h.in:
	Updated autogen.sh, removed config.h.in now generated by autogen.sh
	Thanks to Werner Pantke

2008-08-27  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/config.h.in:
	Re-added

2008-08-27  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* CREDITS:
	Thanks to Werner Pantke

2008-08-27  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* Makefile.am:
	* autogen.sh:
	* configure.ac:
	* schema/Makefile.am:
	* schema/murrine.xml.in.in:
	Added murrine schema file installation

	* src/config.h.in:
	Deleted
	
	* src/murrine_draw.c (murrine_draw_tab):
	Less shading on selected tab

2008-08-27  Werner Pantke  <wpantke@punk-ass-bitch.org>

	* Makefile.am:
	added schema subdirectory for processing and installation, and po
	subdirectory for processing only (no need to install gettext
	catalogs as translations are only used inside the schema atm)

	* autogen.sh:
	added check for intltool(ize) (and run it),
	removed "Now type 'make'[..]" sentence as it's already printed by
	the configure script

	* configure.ac:
	added AC_PROG_INTLTOOL and AM_GLIB_GNU_GETTEXT macros,
	this introduces gettext and intltool (>= 0.40.3) as dependency;
	added generation of po/Makefile.in, schema/Makefile,
	schema/murrine.xml.in

	* po/POTFILES.in:
	marked schema/murrine.xml.in translatable
